--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,5 +9,9 @@ $theme-colors: (
     "dark": #343a40
     );
 
+
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 
+.pointer {
+    cursor: pointer;
+}
